--- a/Majestic-Cabinets/style.css
+++ b/Majestic-Cabinets/style.css
@@ -479,6 +479,7 @@ p {
 	bottom: -60px;
 	visibility: hidden;
 	transition: bottom .5s;
+	padding-left: 10px;
 }
 .portfolio-section .hover-shape p {
 	color: white;
@@ -656,8 +657,6 @@ p {
     margin-right: 22px;
 	height: 14px;
 }
-
-/* Subscribe Section */
 .subscribe-section {
     background-color: #000;
     padding: 30px 0;
@@ -684,6 +683,9 @@ p {
     border: 1px solid #ccc;
     border-radius: 2px;
     outline: none;
+}
+.subscribe-section ::-webkit-input-placeholder{
+	padding-left: 10px;
 }
 .subscribe-section .subscribe-form button {
     background-color: #b31e22;
@@ -1097,5 +1099,19 @@ p {
 	}
 	.blog-section h2 {
 		font-size: 24px;
+	}
+
+	.slider-section img {
+		width: 100%;
+		height: 100vh;
+		object-fit: cover;
+	}
+	.slider-section .item, .slider-section {
+		position: relative;
+		object-fit: cover;
+		height: 100vh;
+	}
+	.contact-column {
+		margin-right: -40px;
 	}
 } 
