--- a/Edison/Assests/css/style.css
+++ b/Edison/Assests/css/style.css
@@ -458,7 +458,7 @@ header .nav-item:after {
 }
 
 .feedback .card img {
-	width: 100%;
+	max-width: 100%;
 	float: right;
 	border-radius: 50%;
 	border: 5px solid #fff;
